--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "@angular/fire": "^6.0.2",
+    "@firebase/app": "0.6.9",
+    "firebase": "7.17.1",
+    "@ngx-pwa/local-storage": "10.0.1"
   }
 }
