--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "axios": "^0.19.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "@angular/fire": "^6.0.2",
+    "@firebase/app": "0.6.9",
+    "firebase": "7.17.1",
+    "@ngx-pwa/local-storage": "10.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
@@ -44,10 +48,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
-    "@angular/fire": "^6.0.2",
-    "@firebase/app": "0.6.9",
-    "firebase": "7.17.1",
-    "@ngx-pwa/local-storage": "10.0.1"
+    "typescript": "~3.9.5"
   }
 }
