--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@angular/fire": "^6.0.2",
     "@firebase/app": "0.6.9",
     "firebase": "7.17.1",
-    "@ngx-pwa/local-storage": "10.0.1"
+    "@ngx-pwa/local-storage": "10.0.1",
+    "core-js": "^2.5.7",
+    "crypto-js": "^3.1.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
