--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "nouislider": "11.1.0",
     "quill": "^1.3.7",
     "stream": "0.0.2",
-    "sweetalert2": "8.16.3"
+    "sweetalert2": "8.16.3",
+    "@ng-util/util": "^10.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
